objects/LMA_RFP__c.object
<CustomObject>
    <fields>
        <fullName>Budget__c</fullName>
        <inlineHelpText>Any changes to the budget require 10 business day to be implemented.</inlineHelpText>
        <label>Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IO_End_Date__c</fullName>
        <inlineHelpText>Within 10 business days CDK can confirm our ability to fulfill this request.</inlineHelpText>
        <label>IO End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IO_Start_Date__c</fullName>
        <inlineHelpText>RFP cut off is 12 business days prior to 1st of the month. 
We will attempt to accept RFP’s after this date based on media availability.</inlineHelpText>
        <label>IO Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>I_O_Attached_Date_Time__c</fullName>
        <label>I/O Attached Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>I_O_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <label>I/O Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LMA_AMA_Region_Alias_Email__c</fullName>
        <description>LMA AMA Region Alias Email</description>
        <label>LMA AMA Region Alias Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>LMA_Region__c</fullName>
        <formula>LMA__r.AMA_Region__c</formula>
        <label>LMA Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LMA_Regional_Director_Email__c</fullName>
        <label>LMA Regional Director Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>LMA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>LMA Account cannot be changed once record is created.  Please click &apos;Cancel&apos; button to cancel the current record and create a new record.</inlineHelpText>
        <label>LMA Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>LMA RFPs</relationshipLabel>
        <relationshipName>LMA_RFPs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Model_1__c</fullName>
        <label>Model 1</label>
        <picklist>
            <picklistValues>
                <fullName>Acadia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acadia Denali</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canyon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canyon Denali</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enclave</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Encore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lacrosse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sierra 1500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sierra 1500 Denali</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sierra 2500 Denali HD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sierra 2500HD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sierra 3500 Denali HD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sierra 3500HD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Terrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Terrain Denali</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verano</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Camaro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colorado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corvette</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cruze</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equinox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Impala</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Malibu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silverado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sonic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suburban</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tahoe</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Model_2__c</fullName>
        <label>Model 2</label>
        <picklist>
            <picklistValues>
                <fullName>Acadia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acadia Denali</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canyon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canyon Denali</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enclave</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Encore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lacrosse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sierra 1500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sierra 1500 Denali</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sierra 2500 Denali HD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sierra 2500HD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sierra 3500 Denali HD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sierra 3500HD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Terrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Terrain Denali</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verano</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Camaro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colorado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corvette</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cruze</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equinox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Impala</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Malibu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silverado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sonic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suburban</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tahoe</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Model_3__c</fullName>
        <label>Model 3</label>
        <picklist>
            <picklistValues>
                <fullName>Acadia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acadia Denali</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canyon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canyon Denali</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enclave</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Encore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lacrosse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sierra 1500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sierra 1500 Denali</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sierra 2500 Denali HD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sierra 2500HD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sierra 3500 Denali HD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sierra 3500HD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Terrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Terrain Denali</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verano</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Camaro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colorado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corvette</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cruze</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equinox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Impala</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Malibu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silverado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sonic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suburban</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tahoe</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <inlineHelpText>Unless noted, budget will be evenly divided by months and models</inlineHelpText>
        <label>Notes</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Proforma_Attached_Date_Time__c</fullName>
        <label>Proforma Attached Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Proforma_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Proforma Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Strategy_Split_1__c</fullName>
        <label>Strategy/Split 1</label>
        <picklist>
            <picklistValues>
                <fullName>100% Retention</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100% Conquest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50% Conquest/50% Retention</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>75% Conquest/25% Retention</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>75% Retention/25% Conquest</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Strategy_Split_2__c</fullName>
        <label>Strategy/Split 2</label>
        <picklist>
            <picklistValues>
                <fullName>100% Retention</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100% Conquest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50% Conquest/50% Retention</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>75% Conquest/25% Retention</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>75% Retention/25% Conquest</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Strategy_Split_3__c</fullName>
        <label>Strategy/Split 3</label>
        <picklist>
            <picklistValues>
                <fullName>100% Retention</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100% Conquest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50% Conquest/50% Retention</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>75% Conquest/25% Retention</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>75% Retention/25% Conquest</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>LMA RFP</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>LMA__c</columns>
        <columns>Status__c</columns>
        <columns>IO_End_Date__c</columns>
        <columns>IO_Start_Date__c</columns>
        <columns>Budget__c</columns>
        <columns>Model_1__c</columns>
        <columns>Notes__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_NORTHCENTRAL</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>LMA__c</columns>
        <columns>Status__c</columns>
        <columns>IO_End_Date__c</columns>
        <columns>IO_Start_Date__c</columns>
        <columns>Budget__c</columns>
        <columns>Model_1__c</columns>
        <columns>Notes__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LMA_Region__c</field>
            <operation>equals</operation>
            <value>NORTHCENTRAL</value>
        </filters>
        <label>All - NORTHCENTRAL</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_NORTHEAST</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>LMA__c</columns>
        <columns>Status__c</columns>
        <columns>IO_End_Date__c</columns>
        <columns>IO_Start_Date__c</columns>
        <columns>Budget__c</columns>
        <columns>Model_1__c</columns>
        <columns>Notes__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LMA_Region__c</field>
            <operation>equals</operation>
            <value>NORTHCENTRAL</value>
        </filters>
        <label>All - NORTHEAST</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_SOUTHEAST</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>LMA__c</columns>
        <columns>Status__c</columns>
        <columns>IO_End_Date__c</columns>
        <columns>IO_Start_Date__c</columns>
        <columns>Budget__c</columns>
        <columns>Model_1__c</columns>
        <columns>Notes__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LMA_Region__c</field>
            <operation>equals</operation>
            <value>NORTHCENTRAL</value>
        </filters>
        <label>All - SOUTHEAST</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_SOUTH_CENTRAL</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>LMA__c</columns>
        <columns>Status__c</columns>
        <columns>IO_End_Date__c</columns>
        <columns>IO_Start_Date__c</columns>
        <columns>Budget__c</columns>
        <columns>Model_1__c</columns>
        <columns>Notes__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LMA_Region__c</field>
            <operation>equals</operation>
            <value>NORTHCENTRAL</value>
        </filters>
        <label>All - SOUTH CENTRAL</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_WESTERN</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>LMA__c</columns>
        <columns>Status__c</columns>
        <columns>IO_End_Date__c</columns>
        <columns>IO_Start_Date__c</columns>
        <columns>Budget__c</columns>
        <columns>Model_1__c</columns>
        <columns>Notes__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LMA_Region__c</field>
            <operation>equals</operation>
            <value>NORTHCENTRAL</value>
        </filters>
        <label>All - WESTERN</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CB_LMA_RFP_Test_LMA_RFP</fullName>
        <filterScope>Queue</filterScope>
        <label>CB LMA RFP Test</label>
        <queue>CB_LMA_RFP_Test</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>LMA_Inquiry_Queue_LMA_RFP</fullName>
        <filterScope>Queue</filterScope>
        <label>LMA-Inquiry Queue</label>
        <queue>LMA_Inquiry_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>RFP-{0000}</displayFormat>
        <label>LMA RFP Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LMA RFPs</pluralLabel>
    <recordTypes>
        <fullName>BG</fullName>
        <active>true</active>
        <description>Buick/GMC</description>
        <label>BG</label>
    </recordTypes>
    <recordTypes>
        <fullName>Cadillac</fullName>
        <active>true</active>
        <description>Cadillac</description>
        <label>Cadillac</label>
    </recordTypes>
    <recordTypes>
        <fullName>Chevy</fullName>
        <active>true</active>
        <description>Chevrolet</description>
        <label>Chevy</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>CB_SLS_Cannot_Edit_Cancelled_RFP</fullName>
        <active>true</active>
        <description>Cannot edit RFP when Status is Cancelled</description>
        <errorConditionFormula>AND(NOT(ISNEW()), 
  NOT(Begins($User.Username, $Setup.GlobalSettings__c.Admin_Integration_Username__c)), 
 PRIORVALUE( Status__c ) = &apos;Cancelled&apos;
)</errorConditionFormula>
        <errorMessage>Can not edit RFP when Status is Cancelled. (LMA RFP)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CB_SLS_Cannot_Edit_RecType_LMA</fullName>
        <active>true</active>
        <description>Cannot edit record Type or LMA.</description>
        <errorConditionFormula>AND(NOT(ISNEW()),
 NOT(Begins($User.Username, $Setup.GlobalSettings__c.Admin_Integration_Username__c)),
(ISCHANGED(RecordTypeId)||ISCHANGED( LMA__c)) 
)</errorConditionFormula>
        <errorMessage>Cannot edit Record Type or LMA. (LMA RFP)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CB_SLS_IO_Start_Date_Create_Date_Compare</fullName>
        <active>true</active>
        <description>CB_SLS_IO_Start_Date_Create_Date_Compare</description>
        <errorConditionFormula>AND( ISNEW(),
      NOT(Begins($User.Username, $Setup.GlobalSettings__c.Admin_Integration_Username__c)),
      IO_Start_Date__c -   TODAY()  &lt; 10)</errorConditionFormula>
        <errorDisplayField>IO_Start_Date__c</errorDisplayField>
        <errorMessage>Within 10 business days CDK can confirm our ability to fulfill this request.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CB_SLS_IO_Start_Date_Update</fullName>
        <active>true</active>
        <description>CB_SLS_IO_Start_Date_Update</description>
        <errorConditionFormula>AND (   NOT(Begins($User.Username, $Setup.GlobalSettings__c.Admin_Integration_Username__c)),
       ISCHANGED (IO_Start_Date__c) ,
      (PRIORVALUE(IO_Start_Date__c ) &lt; Today())
  )</errorConditionFormula>
        <errorDisplayField>IO_Start_Date__c</errorDisplayField>
        <errorMessage>Cannot update IO Start Date if the date is in the past  (LMA RFP)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CB_SLS_IO_Start_End_Date_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND( NOT(Begins($User.Username, $Setup.GlobalSettings__c.Admin_Integration_Username__c)),
IO_Start_Date__c &gt; IO_End_Date__c)</errorConditionFormula>
        <errorDisplayField>IO_Start_Date__c</errorDisplayField>
        <errorMessage>IO End Date cannot be less than IO Start Date (LMA RFP)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CB_SLS_Model1andStrategy1NotNull</fullName>
        <active>true</active>
        <description>If Model1 is populated, Strategy_Split_1 can not be null.</description>
        <errorConditionFormula>AND( NOT(Begins($User.Username, $Setup.GlobalSettings__c.Admin_Integration_Username__c)),
(ISBLANK(TEXT(Model_1__c)) &amp;&amp; 
NOT(ISBLANK(TEXT(Strategy_Split_1__c))) ) 
|| 
(NOT(ISBLANK(TEXT(Model_1__c))) &amp;&amp; 
ISBLANK(TEXT(Strategy_Split_1__c)) ))</errorConditionFormula>
        <errorDisplayField>Model_1__c</errorDisplayField>
        <errorMessage>Both Model 1 and Stategy_Split_1 must be populated. (LMA RFP)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CB_SLS_Model2andStrategy2NotNull</fullName>
        <active>true</active>
        <description>If Model2 is populated, Strategy_Split_2 can not be null.</description>
        <errorConditionFormula>AND( NOT(Begins($User.Username, $Setup.GlobalSettings__c.Admin_Integration_Username__c)),
(ISBLANK(TEXT(Model_2__c)) &amp;&amp; 
NOT(ISBLANK(TEXT(Strategy_Split_2__c))) ) 
|| 
(NOT(ISBLANK(TEXT(Model_2__c))) &amp;&amp; 
ISBLANK(TEXT(Strategy_Split_2__c)) ))</errorConditionFormula>
        <errorDisplayField>Model_2__c</errorDisplayField>
        <errorMessage>Both Model 2 and Stategy_Split_2 must be populated. (LMA RFP)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CB_SLS_Model3andStrategy3NotNull</fullName>
        <active>true</active>
        <description>If Model3 is populated, Strategy_Split_3 can not be null.</description>
        <errorConditionFormula>AND( NOT(Begins($User.Username, $Setup.GlobalSettings__c.Admin_Integration_Username__c)),
(ISBLANK(TEXT(Model_3__c)) &amp;&amp; 
NOT(ISBLANK(TEXT(Strategy_Split_3__c))) ) 
|| 
(NOT(ISBLANK(TEXT(Model_3__c))) &amp;&amp; 
ISBLANK(TEXT(Strategy_Split_3__c)) ))</errorConditionFormula>
        <errorDisplayField>Model_3__c</errorDisplayField>
        <errorMessage>Both Model 3 and Stategy_Split_3 must be populated. (LMA RFP)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CB_SLS_Model4andStrategy4NotNull</fullName>
        <active>true</active>
        <description>If Model4 is populated, Stategy_Split_4 can not be null.</description>
        <errorConditionFormula>AND( NOT(Begins($User.Username, $Setup.GlobalSettings__c.Admin_Integration_Username__c)),
(ISBLANK(TEXT(Model_4__c)) &amp;&amp; 
NOT(ISBLANK(TEXT(Strategy_Split_4__c))) ) 
|| 
(NOT(ISBLANK(TEXT(Model_4__c))) &amp;&amp; 
ISBLANK(TEXT(Strategy_Split_4__c)) ))</errorConditionFormula>
        <errorDisplayField>Model_4__c</errorDisplayField>
        <errorMessage>Both Model 4 and Stategy_Split_4 must be populated. (LMA RFP)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CB_SLS_SysDate_Past_IO_End_Date</fullName>
        <active>true</active>
        <description>CB_SLS_SysDate_Past_IO_End_Date</description>
        <errorConditionFormula>AND(  NOT(Begins($User.Username, $Setup.GlobalSettings__c.Admin_Integration_Username__c)),
NOT(ISNEW()), TODAY() &gt;  IO_End_Date__c)</errorConditionFormula>
        <errorDisplayField>IO_End_Date__c</errorDisplayField>
        <errorMessage>Cannot update record when current date is past IO End Date.  ( LMA RFP)</errorMessage>
    </validationRules>
</CustomObject>